Fix compilation with kernel 5.4+
 - Change make argument from SUBDIRS to M
 - Change struct to skb_frag_t -> bio_vec
 - Exclude num_online_cpus and pci-aspm if kernel > 5.4

Signed-off-by: Markus Eckert <meckert@blackned.de>

--- a/kmod/Makefile
+++ b/kmod/Makefile
@@ -264,9 +264,9 @@ $(DRIVER_NAME)-objs := $(CFILES:.c=.o)
 else
 default:
 ifeq ($(KOBJ),$(KSRC))
-	$(MAKE) -C $(KSRC) SUBDIRS=$(shell pwd) modules
+	$(MAKE) -C $(KSRC) M=$(shell pwd) modules
 else
-	$(MAKE) -C $(KSRC) O=$(KOBJ) SUBDIRS=$(shell pwd) modules
+	$(MAKE) -C $(KSRC) O=$(KOBJ) M=$(shell pwd) modules
 endif
 endif
 
